# scryer-plugins

./: .gitattributes  .gitignore  ARCHITECTURE.md  CONTRIBUTORS.md  registry.json  rust-toolchain.toml
.cargo/: config.toml
.github/: copilot-instructions.md
.github/workflows/: archive-extraction-conformance.yml  plugin-ci.yml  publish-catalog-v2.yml  release-plugin-sccache-test.yml  release-plugin-v2-legacy.yml  release-plugin-v3-stage.yml  release-plugin-v3.yml  release-plugin.yml
archive_extractors/archive-extraction/: Cargo.toml  LICENSE  README.md
archive_extractors/archive-extraction/src/: lib.rs  main.rs  par2_host_solver.rs
archive_extractors/archive-extraction/tests/: host_conformance.rs
archive_extractors/archive-extraction/tests/fixtures/: README.md
catalog/: community-v3.toml
download_clients/aria2/: Cargo.toml
download_clients/aria2/src/: lib.rs
download_clients/deluge/: Cargo.toml
download_clients/deluge/src/: lib.rs
download_clients/downloadstation/: Cargo.toml
download_clients/downloadstation/src/: lib.rs
download_clients/flood/: Cargo.toml
download_clients/flood/src/: lib.rs
download_clients/freebox/: Cargo.toml
download_clients/freebox/src/: lib.rs
download_clients/hadouken/: Cargo.toml
download_clients/hadouken/src/: lib.rs
download_clients/nzbvortex/: Cargo.toml
download_clients/nzbvortex/src/: lib.rs
download_clients/pneumatic/: Cargo.toml
download_clients/pneumatic/src/: lib.rs
download_clients/qbittorrent/: Cargo.toml
download_clients/qbittorrent/src/: lib.rs
download_clients/rqbit/: Cargo.toml
download_clients/rqbit/src/: lib.rs
download_clients/rtorrent/: Cargo.toml
download_clients/rtorrent/src/: lib.rs
download_clients/torrent-blackhole/: Cargo.toml
download_clients/torrent-blackhole/src/: lib.rs
download_clients/transmission/: Cargo.toml
download_clients/transmission/src/: lib.rs
download_clients/tribler/: Cargo.toml
download_clients/tribler/src/: lib.rs
download_clients/usenet-blackhole/: Cargo.toml
download_clients/usenet-blackhole/src/: lib.rs
download_clients/utorrent/: Cargo.toml
download_clients/utorrent/src/: lib.rs
indexers/amenzb/: Cargo.toml
indexers/amenzb/src/: lib.rs
indexers/animetosho/: Cargo.toml
indexers/animetosho-archive/: Cargo.toml
indexers/animetosho-archive/src/: lib.rs
indexers/animetosho-xyz/: Cargo.toml
indexers/animetosho-xyz/src/: lib.rs
indexers/animetosho/src/: lib.rs
indexers/aninzb/: Cargo.toml
indexers/aninzb/src/: lib.rs
indexers/broadcasthe-net/: Cargo.toml
indexers/broadcasthe-net/src/: lib.rs
indexers/dognzb/: Cargo.toml
indexers/dognzb/src/: lib.rs
indexers/fanzub/: Cargo.toml
indexers/fanzub/src/: lib.rs
indexers/filelist/: Cargo.toml
indexers/filelist/src/: lib.rs
indexers/hdbits/: Cargo.toml
indexers/hdbits/src/: lib.rs
indexers/iptorrents/: Cargo.toml
indexers/iptorrents/src/: lib.rs
indexers/newznab/: Cargo.toml
indexers/newznab-common/: Cargo.toml
indexers/newznab-common/src/: lib.rs
indexers/newznab/src/: lib.rs
indexers/nyaa/: Cargo.toml
indexers/nyaa/src/: lib.rs
indexers/nzbgeek/: Cargo.toml
indexers/nzbgeek/src/: lib.rs
indexers/prowlarr/: Cargo.toml
indexers/prowlarr/src/: lib.rs
indexers/rss-common/: Cargo.toml
indexers/rss-common/src/: lib.rs
indexers/torrent-rss/: Cargo.toml
indexers/torrent-rss/src/: lib.rs
indexers/torrentleech/: Cargo.toml
indexers/torrentleech/src/: lib.rs
indexers/torznab/: Cargo.toml
indexers/torznab/src/: lib.rs
indexers/tsukihime/: Cargo.toml
indexers/tsukihime/src/: lib.rs
notifications/apprise/: Cargo.toml
notifications/apprise/src/: lib.rs
notifications/custom-script/: Cargo.toml
notifications/custom-script/src/: lib.rs
notifications/discord/: Cargo.toml
notifications/discord/src/: lib.rs
notifications/email/: Cargo.toml  README.md
notifications/email/src/: lib.rs
notifications/gotify/: Cargo.toml
notifications/gotify/src/: lib.rs
notifications/jellyfin/: Cargo.toml  README.md
notifications/jellyfin/src/: lib.rs
notifications/join/: Cargo.toml
notifications/join/src/: lib.rs
notifications/mailgun/: Cargo.toml
notifications/mailgun/src/: lib.rs
notifications/mediabrowser/: Cargo.toml
notifications/notifiarr/: Cargo.toml
notifications/notify-common/: Cargo.toml
notifications/ntfy/: Cargo.toml
notifications/plex/: Cargo.toml
notifications/prowl/: Cargo.toml
notifications/pushbullet/: Cargo.toml
notifications/pushcut/: Cargo.toml
notifications/pushover/: Cargo.toml
notifications/sendgrid/: Cargo.toml
notifications/signal/: Cargo.toml
notifications/simplepush/: Cargo.toml
notifications/slack/: Cargo.toml
notifications/synology/: Cargo.toml
notifications/telegram/: Cargo.toml
notifications/trakt/: Cargo.toml
notifications/twitter/: Cargo.toml
notifications/webhook/: Cargo.toml
notifications/xbmc/: Cargo.toml
pdk/scryer-plugin-pdk/: Cargo.toml  README.md
rule_packs/: anime-scoring.json  manifest.json  torrent-optimization.json
scripts/: release.sh  validate_registry.py
subtitles/amenzb/: Cargo.toml
subtitles/animetosho/: Cargo.toml
subtitles/animetosho-xyz/: Cargo.toml
subtitles/enhanced-sync/: Cargo.toml  README.md  build.rs
subtitles/jimaku/: Cargo.toml
subtitles/opensubtitles/: Cargo.toml
subtitles/subdl/: Cargo.toml
subtitles/tsukihime/: Cargo.toml
subtitles/whisper/: Cargo.toml
tmp/synthetic-size/: sizes.tsv
transcoders/remux-streaming-copy/: Cargo.toml  README.md
xtask/: Cargo.toml
xtask/src/: main.rs  plugin_new.rs
xtask/templates/plugin_new/: lib.rs.tpl
xtask/templates/plugin_new/exports/: archive_extractor.rs.tpl  download_client.rs.tpl  indexer.rs.tpl  notification.rs.tpl  subtitle.rs.tpl
xtask/templates/plugin_new/imports/: archive_extractor.txt  download_client.txt  indexer.txt  notification.txt  subtitle.txt
xtask/templates/plugin_new/provider/: archive_extractor.rs.tpl  download_client.rs.tpl  indexer.rs.tpl  notification.rs.tpl  subtitle.rs.tpl
xtask/tests/: archive_extraction_host_harness.rs
(+121 files in other folders)
