[package]
name = "xtask"
version = "0.0.0"
edition = "2024"
publish = false
license = "GPL-3.0-only"

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
semver = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
blake3 = "1"
scryer-plugin-sdk = "1.5.0"
tempfile = "3"
toml_edit = "0.22"
extism = "1.13"
