[package]
name = "xtask"
version = "0.0.0"
edition = "2024"
publish = false
license = "GPL-3.0-only"

[dependencies]
anyhow = "1"
brotli = "8"
clap = { version = "4", features = ["derive"] }
semver = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
base64 = "0.22"
sha2 = "0.10"
sha3 = "0.10"
blake3 = "1"
scryer-plugin-sdk = "3.3.0"
tempfile = "3"
toml_edit = "0.22"
extism = "1.30"
zstd = "0.13"

[dev-dependencies]
aws-lc-sys = "0.42"
crc32fast = "1"
wasmtime = "43"
wasmtime-wasi = "43"
zip = { version = "4.6.1", default-features = false, features = ["deflate-flate2-zlib-rs"] }

[profile.xtask-release]
inherits = "release"
codegen-units = 64
lto = false
opt-level = "s"
