[package]
name = "archive-extraction-archive-extractor"
version = "0.1.0"
edition = "2024"
license = "GPL-3.0-only"
description = "Optional archive extraction plugin for RAR, ZIP, and PAR2 verify/repair"

[package.metadata.scryer]
official = true
plugin_id = "archive-extraction"
catalog_versions = ["v3"]
min_scryer_version = "0.17.0"
feature_sets = [{ required_features = [] }, { required_features = ["simd128", "relaxed-simd"] }]
docs_url = "https://github.com/scryer-media/scryer-plugins/tree/main/archive_extractors/archive-extraction"
source_repo = "https://github.com/scryer-media/scryer-plugins/tree/main/archive_extractors/archive-extraction"

[[bin]]
name = "archive_extraction_archive_extractor"
path = "src/main.rs"

[dependencies]
scryer-plugin-pdk = { git = "https://github.com/scryer-media/scryer-plugins", tag = "scryer-plugin-pdk/v0.1.1", package = "scryer-plugin-pdk" }
scryer-plugin-sdk = "3.4"
serde_json = "1"
weaver-par2 = { version = "0.2.0", default-features = false }
weaver-reed-solomon = { version = "0.2.0", default-features = false }
weaver-unrar = { version = "0.2.0", default-features = false, features = ["crypto-host", "crc-host"] }
zip = { version = "4.6.1", default-features = false, features = ["deflate-flate2-zlib-rs"] }

[profile.plugin-release]
inherits = "release"
opt-level = 3
lto = "fat"
strip = true
panic = "abort"
