[package]
name = "archive-extraction-archive-extractor"
version = "0.1.5"
edition = "2024"
license-file = "LICENSE"
description = "Optional archive extraction plugin for RAR, ZIP, and 7z"

[package.metadata.scryer]
official = true
plugin_id = "archive-extraction"
catalog_versions = ["v3"]
min_scryer_version = "0.17.0"
feature_sets = [{ required_features = [], wasm_opt = "speed" }, { required_features = ["simd128", "relaxed-simd"] }]
docs_url = "https://github.com/scryer-media/scryer-plugins/tree/main/archive_extractors/archive-extraction"
source_repo = "https://github.com/scryer-media/scryer-plugins/tree/main/archive_extractors/archive-extraction"

[[bin]]
name = "archive_extraction_archive_extractor"
path = "src/main.rs"

[dependencies]
scryer-plugin-pdk = { path = "../../pdk/scryer-plugin-pdk" }
scryer-plugin-sdk = "3.6.0"
serde_json = "1"
sevenz-rust2 = { version = "0.21", default-features = false, features = ["aes256", "bzip2", "deflate", "ppmd"] }
weaver-unrar = { version = "0.2.0", default-features = false, features = ["crypto-host", "crc-host"] }
zip = { version = "4.6.1", default-features = false, features = ["deflate-flate2-zlib-rs"] }

[profile.plugin-release]
inherits = "release"
opt-level = 3
lto = "fat"
strip = true
panic = "abort"
