[package]
name = "deluge-download-client"
version = "0.1.2"
edition = "2024"
license = "GPL-3.0-only"
description = "Deluge JSON-RPC torrent download client plugin"

[package.metadata.scryer]
official = true
plugin_id = "deluge"
status = "beta"
catalog_versions = ["v3"]
min_scryer_version = "0.17.0"
feature_sets = [{ required_features = [] }, { required_features = ["simd128", "relaxed-simd"] }]
docs_url = "https://github.com/scryer-media/scryer-plugins/tree/main/download_clients/deluge"
source_repo = "https://github.com/scryer-media/scryer-plugins/tree/main/download_clients/deluge"

[lib]
crate-type = ["cdylib"]

[dependencies]
base64 = "0.22"
extism-pdk = "1.4"
scryer-plugin-sdk = "3.2.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[profile.plugin-release]
inherits = "release"
opt-level = 3
lto = "fat"
strip = true
panic = "abort"
