[package]
name = "freebox-download-client"
version = "0.1.0"
edition = "2024"
license = "GPL-3.0-only"
description = "Freebox Download torrent client plugin"

[package.metadata.scryer]
official = true
plugin_id = "freebox"
status = "beta"
catalog_versions = ["v3"]
feature_sets = [{ required_features = [] }, { required_features = ["simd128", "relaxed-simd"] }]
docs_url = "https://github.com/scryer-media/scryer-plugins/tree/main/download_clients/freebox"
source_repo = "https://github.com/scryer-media/scryer-plugins/tree/main/download_clients/freebox"
distribution_base_url = "https://cdn.scryer.media/scryer/plugins-v3/freebox"

[lib]
crate-type = ["cdylib"]

[dependencies]
base64 = "0.22"
extism-pdk = "1.4"
hmac = "0.12"
scryer-plugin-sdk = "3.0.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha1 = "0.10"
urlencoding = "2"

[profile.plugin-release]
inherits = "release"
opt-level = 3
lto = "fat"
strip = true
panic = "abort"
