[package]
name = "qbittorrent-download-client"
version = "0.1.14"
edition = "2024"
license = "GPL-3.0-only"
description = "Torrent download client plugin for qBittorrent with category/tag routing, queue control, and import handoff support"

[package.metadata.scryer]
official = true
plugin_id = "qbittorrent"

[lib]
crate-type = ["cdylib"]

[dependencies]
base64 = "0.22"
extism-pdk = "1.4"
scryer-plugin-sdk = "1.6.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha1 = "0.10"

[profile.plugin-release]
inherits = "release"
opt-level = 3
lto = "fat"
strip = true
panic = "abort"
