[package]
name = "qbittorrent-download-client"
version = "0.1.17"
edition = "2024"
license = "GPL-3.0-only"
description = "Torrent download client plugin for qBittorrent with category/tag routing, queue control, and import handoff support"

[package.metadata.scryer]
official = true
plugin_id = "qbittorrent"
catalog_versions = ["v3"]
min_scryer_version = "0.16.0"
feature_sets = [{ required_features = [] }, { required_features = ["simd128", "relaxed-simd"] }]
docs_url = "https://github.com/scryer-media/scryer-plugins/tree/main/download_clients/qbittorrent"
source_repo = "https://github.com/scryer-media/scryer-plugins/tree/main/download_clients/qbittorrent"
distribution_base_url = "https://cdn.scryer.media/scryer/plugins-v3/qbittorrent"

[lib]
crate-type = ["cdylib"]

[dependencies]
base64 = "0.22"
extism-pdk = "1.4"
scryer-plugin-sdk = "3.0.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha1 = "0.10"

[profile.plugin-release]
inherits = "release"
opt-level = 3
lto = "fat"
strip = true
panic = "abort"
