[package]
name = "rtorrent-download-client"
version = "0.1.0"
edition = "2024"
license = "GPL-3.0-only"
description = "rTorrent XML-RPC download client plugin"

[package.metadata.scryer]
official = true
plugin_id = "rtorrent"
status = "beta"
catalog_versions = ["v3"]
feature_sets = [{ required_features = [] }, { required_features = ["simd128", "relaxed-simd"] }]
docs_url = "https://github.com/scryer-media/scryer-plugins/tree/main/download_clients/rtorrent"
source_repo = "https://github.com/scryer-media/scryer-plugins/tree/main/download_clients/rtorrent"
distribution_base_url = "https://cdn.scryer.media/scryer/plugins/rtorrent"

[lib]
crate-type = ["cdylib"]

[dependencies]
base64 = "0.22"
extism-pdk = "1.4"
roxmltree = "0.20"
serde = { version = "1", features = ["derive"] }
scryer-plugin-sdk = "3.0.0"
serde_json = "1"
urlencoding = "2"

[profile.plugin-release]
inherits = "release"
opt-level = 3
lto = "fat"
strip = true
panic = "abort"
