[package]
name = "torrent-blackhole-download-client"
version = "0.1.0"
edition = "2024"
license = "GPL-3.0-only"
description = "Torrent blackhole download client plugin"

[package.metadata.scryer]
official = true
plugin_id = "torrent-blackhole"
status = "beta"
catalog_versions = ["v3"]
feature_sets = [{ required_features = [] }, { required_features = ["simd128", "relaxed-simd"] }]
docs_url = "https://github.com/scryer-media/scryer-plugins/tree/main/download_clients/torrent-blackhole"
source_repo = "https://github.com/scryer-media/scryer-plugins/tree/main/download_clients/torrent-blackhole"
distribution_base_url = "https://cdn.scryer.media/scryer/plugins/torrent-blackhole"

[lib]
crate-type = ["cdylib"]

[dependencies]
base64 = "0.22"
extism-pdk = "1.4"
scryer-plugin-sdk = "3.0.0"
serde_json = "1"

[profile.plugin-release]
inherits = "release"
opt-level = 3
lto = "fat"
strip = true
panic = "abort"
