[package]
name = "utorrent-download-client"
version = "0.1.0"
edition = "2024"
license = "GPL-3.0-only"
description = "uTorrent download client plugin"

[package.metadata.scryer]
official = true
plugin_id = "utorrent"
status = "beta"
catalog_versions = ["v3"]
feature_sets = [{ required_features = [] }, { required_features = ["simd128", "relaxed-simd"] }]
docs_url = "https://github.com/scryer-media/scryer-plugins/tree/main/download_clients/utorrent"
source_repo = "https://github.com/scryer-media/scryer-plugins/tree/main/download_clients/utorrent"
distribution_base_url = "https://cdn.scryer.media/scryer/plugins/utorrent"

[lib]
crate-type = ["cdylib"]

[dependencies]
base64 = "0.22"
extism-pdk = "1.4"
roxmltree = "0.20"
scryer-plugin-sdk = "2.3.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
urlencoding = "2"

[profile.plugin-release]
inherits = "release"
opt-level = 3
lto = "fat"
strip = true
panic = "abort"
