[package]
name = "animetosho-xyz-indexer"
version = "0.1.0"
edition = "2024"
license = "GPL-3.0-only"
description = "AnimeTosho.xyz Newznab/Torznab feed indexer"

[package.metadata.scryer]
official = true
plugin_id = "animetosho-xyz"
catalog_versions = ["v3"]
min_scryer_version = "0.17.0"
feature_sets = [{ required_features = [] }, { required_features = ["simd128", "relaxed-simd"] }]
docs_url = "https://github.com/scryer-media/scryer-plugins/tree/main/indexers/animetosho-xyz"
source_repo = "https://github.com/scryer-media/scryer-plugins/tree/main/indexers/animetosho-xyz"

[lib]
crate-type = ["cdylib"]

[dependencies]
extism-pdk = "1.4"
newznab-common = { path = "../newznab-common" }
serde_json = "1"
scryer-plugin-sdk = "3.2.0"

[profile.plugin-release]
inherits = "release"
opt-level = 3
lto = "fat"
strip = true
panic = "abort"
