[package]
name = "animetosho-indexer"
version = "0.3.7"
edition = "2021"
license = "GPL-3.0-only"

[lib]
crate-type = ["cdylib"]

[dependencies]
extism-pdk = "1.4"
scryer-plugin-sdk = { git = "https://github.com/scryer-media/scryer.git", tag = "plugin-sdk-v1.5.0" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
