[package]
name = "aninzb-indexer"
version = "0.1.2"
edition = "2024"
license = "GPL-3.0-only"
description = "AniNZB-specific Newznab indexer for anime Usenet releases"

[package.metadata.scryer]
official = true
plugin_id = "aninzb"
catalog_versions = ["v3"]
feature_sets = [{ required_features = [] }, { required_features = ["simd128", "relaxed-simd"] }]
docs_url = "https://github.com/scryer-media/scryer-plugins/tree/main/indexers/aninzb"
source_repo = "https://github.com/scryer-media/scryer-plugins/tree/main/indexers/aninzb"

[lib]
crate-type = ["cdylib"]

[dependencies]
extism-pdk = "1.4"
newznab-common = { path = "../newznab-common" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
scryer-plugin-sdk = "=3.0.0"
html-escape = "0.2"
url = "2"

[profile.plugin-release]
inherits = "release"
opt-level = 3
lto = "fat"
strip = true
panic = "abort"
