[package]
name = "broadcasthe-net-indexer"
version = "0.1.0"
edition = "2024"
license = "GPL-3.0-only"
description = "BroadcasTheNet JSON-RPC torrent indexer"

[package.metadata.scryer]
official = true
plugin_id = "broadcasthe-net"
status = "beta"
catalog_versions = ["v3"]
min_scryer_version = "0.17.0"
feature_sets = [{ required_features = [] }, { required_features = ["simd128", "relaxed-simd"] }]
docs_url = "https://github.com/scryer-media/scryer-plugins/tree/main/indexers/broadcasthe-net"
source_repo = "https://github.com/scryer-media/scryer-plugins/tree/main/indexers/broadcasthe-net"

[lib]
crate-type = ["cdylib"]

[dependencies]
chrono = { version = "0.4", default-features = false, features = ["alloc", "std"] }
extism-pdk = "1.4"
scryer-plugin-sdk = "3.2.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[profile.plugin-release]
inherits = "release"
opt-level = 3
lto = "fat"
strip = true
panic = "abort"
