[package]
name = "dognzb-indexer"
version = "0.1.5"
edition = "2021"
license = "GPL-3.0-only"
description = "DogNZB-specific Newznab indexer with rating, genre, and comment metadata extraction"

[package.metadata.scryer]
official = true
plugin_id = "dognzb"

[lib]
crate-type = ["cdylib"]

[dependencies]
extism-pdk = "1.4"
newznab-common = { path = "../newznab-common" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
scryer-plugin-sdk = "1.5.0"
