[package]
name = "dognzb-indexer"
version = "0.1.10"
edition = "2024"
license = "GPL-3.0-only"
description = "DogNZB-specific Newznab indexer with rating, genre, and comment metadata extraction"

[package.metadata.scryer]
official = true
plugin_id = "dognzb"
catalog_versions = ["v3"]
feature_sets = [{ required_features = [] }, { required_features = ["simd128", "relaxed-simd"] }]
docs_url = "https://github.com/scryer-media/scryer-plugins/tree/main/indexers/dognzb"
source_repo = "https://github.com/scryer-media/scryer-plugins/tree/main/indexers/dognzb"
distribution_base_url = "https://cdn.scryer.media/scryer/plugins/dognzb"

[lib]
crate-type = ["cdylib"]

[dependencies]
extism-pdk = "1.4"
newznab-common = { path = "../newznab-common" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
scryer-plugin-sdk = "2.0.0"

[profile.plugin-release]
inherits = "release"
opt-level = 3
lto = "fat"
strip = true
panic = "abort"
