[package]
name = "filelist-indexer"
version = "0.1.0"
edition = "2024"
license = "GPL-3.0-only"
description = "FileList JSON torrent indexer"

[package.metadata.scryer]
official = true
plugin_id = "filelist"
status = "beta"
catalog_versions = ["v3"]
min_scryer_version = "0.17.0"
feature_sets = [{ required_features = [] }, { required_features = ["simd128", "relaxed-simd"] }]
docs_url = "https://github.com/scryer-media/scryer-plugins/tree/main/indexers/filelist"
source_repo = "https://github.com/scryer-media/scryer-plugins/tree/main/indexers/filelist"

[lib]
crate-type = ["cdylib"]

[dependencies]
base64 = "0.22"
extism-pdk = "1.4"
scryer-plugin-sdk = "3.2.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
url = "2"
urlencoding = "2"

[profile.plugin-release]
inherits = "release"
opt-level = 3
lto = "fat"
strip = true
panic = "abort"
