[package]
name = "newznab-common"
version = "0.1.3"
edition = "2021"
license = "GPL-3.0-only"

[dependencies]
extism-pdk = "1.4"
quick-xml = "0.37"
scryer-plugin-sdk = { git = "https://github.com/scryer-media/scryer.git", tag = "plugin-sdk-v1.5.0" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
