[package]
name = "newznab-common"
version = "0.1.3"
edition = "2021"
license = "GPL-3.0-only"

[dependencies]
extism-pdk = "1.4"
quick-xml = "0.41"
scryer-plugin-sdk = "3.2.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
unicode-normalization = "0.1"
url = "2"

[dev-dependencies]
http = "1"
