[package]
name = "nzbgeek-indexer"
version = "0.2.9"
edition = "2021"
license = "GPL-3.0-only"
description = "NZBGeek-specific Newznab indexer with metadata extraction (thumbs, subtitles, password detection)"

[package.metadata.scryer]
official = true
plugin_id = "nzbgeek"

[lib]
crate-type = ["cdylib"]

[dependencies]
extism-pdk = "1.4"
newznab-common = { path = "../newznab-common" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
scryer-plugin-sdk = "1.5.0"
