[package]
name = "nzbgeek-indexer"
version = "0.2.10"
edition = "2024"
license = "GPL-3.0-only"
description = "NZBGeek-specific Newznab indexer with metadata extraction (thumbs, subtitles, password detection)"

[package.metadata.scryer]
official = true
plugin_id = "nzbgeek"

[lib]
crate-type = ["cdylib"]

[dependencies]
extism-pdk = "1.4"
newznab-common = { path = "../newznab-common" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
scryer-plugin-sdk = "1.6.0"

[profile.plugin-release]
inherits = "release"
opt-level = 3
lto = "fat"
strip = true
panic = "abort"
