[package]
name = "prowlarr-indexer"
version = "0.1.0"
edition = "2021"
license = "GPL-3.0-only"
description = "Prowlarr management indexer that syncs managed Newznab and Torznab child configs"

[lib]
crate-type = ["cdylib"]

[dependencies]
extism-pdk = "1.4"
scryer-plugin-sdk = "1.6.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
