[package]
name = "torrent-rss-indexer"
version = "0.1.12"
edition = "2024"
license = "GPL-3.0-only"
description = "Generic torrent RSS indexer for trackers and aggregators that expose direct RSS feeds without Torznab"

[package.metadata.scryer]
official = true
plugin_id = "torrent-rss"

[lib]
crate-type = ["cdylib"]

[dependencies]
base64 = "0.22"
extism-pdk = "1.4"
quick-xml = "0.38"
scryer-plugin-sdk = "1.6.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[profile.plugin-release]
inherits = "release"
opt-level = 3
lto = "fat"
strip = true
panic = "abort"
