[package]
name = "torrentleech-indexer"
version = "0.1.0"
edition = "2024"
license = "GPL-3.0-only"
description = "TorrentLeech RSS indexer"

[package.metadata.scryer]
official = true
plugin_id = "torrentleech"
status = "beta"
catalog_versions = ["v3"]
feature_sets = [{ required_features = [] }, { required_features = ["simd128", "relaxed-simd"] }]
docs_url = "https://github.com/scryer-media/scryer-plugins/tree/main/indexers/torrentleech"
source_repo = "https://github.com/scryer-media/scryer-plugins/tree/main/indexers/torrentleech"
distribution_base_url = "https://cdn.scryer.media/scryer/plugins/torrentleech"

[lib]
crate-type = ["cdylib"]

[dependencies]
extism-pdk = "1.4"
rss-indexer-common = { path = "../rss-common" }
serde_json = "1"
scryer-plugin-sdk = "3.0.0"

[profile.plugin-release]
inherits = "release"
opt-level = 3
lto = "fat"
strip = true
panic = "abort"
