[package]
name = "torznab-indexer"
version = "0.1.8"
edition = "2021"
license = "GPL-3.0-only"
description = "Generic Torznab-compatible torrent indexer for Jackett and native Torznab feeds"

[package.metadata.scryer]
official = true
plugin_id = "torznab"

[lib]
crate-type = ["cdylib"]

[dependencies]
extism-pdk = "1.4"
newznab-common = { path = "../newznab-common" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
scryer-plugin-sdk = "1.5.0"
